{
    "name": "Controls",
    "maps": [
        {
            "name": "Movement",
            "id": "8ff7f23e-6e0a-4d74-aeb9-759400a56c83",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "f170b5d8-c65a-4fca-bd8a-c0855af27954",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Movement",
                    "id": "42b522b5-a30e-4f2f-bf5a-7bd07848515a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "eb7298a9-dfac-4a0c-b5d8-c945ea677cf6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "63289422-ad35-44fc-915f-e4e8bc18b53d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7bc183e8-8c6a-4edd-8eef-41860c0d8aae",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "969ac195-1fff-452c-bfdb-40395c91274d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Interact",
            "id": "8a5e0748-e8e8-4b24-86c3-8a743689d2ba",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "b445c684-b2d0-49dc-935d-59bed31153eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Action",
                    "type": "Button",
                    "id": "414a5423-b0d5-42a1-a83f-f094c6c582c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Aim",
                    "type": "PassThrough",
                    "id": "098a9cb2-5674-4af3-b33f-9fb3e3a2d29c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4d1f09e4-d6c7-48e6-bb3c-6d522fc6c1e0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95489afe-eccc-4fb2-9d96-913cecc87b31",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4c83deb-8949-4e9e-89e6-13d0b6c841b4",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Inventory",
            "id": "49a58f6b-da34-4061-86d8-0c328f76a78c",
            "actions": [
                {
                    "name": "Toggle",
                    "type": "Button",
                    "id": "2081417b-ed54-4a97-b66e-37b851b0beef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "188e5497-3579-4750-841d-c12d1f288099",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Toggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3aa96b5c-d46e-4971-bd5b-a96fe4c484c6",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Toggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Hotbar",
            "id": "1d266001-ceb8-4728-8419-c4db8b79b9e6",
            "actions": [
                {
                    "name": "Scroll",
                    "type": "Value",
                    "id": "051ac27c-3299-4654-9c80-a98ae1349d2f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot1",
                    "type": "Button",
                    "id": "009f114b-58be-4015-ad27-150682363afd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot2",
                    "type": "Button",
                    "id": "20388ccf-51cf-4956-9aa4-526da359e3e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot3",
                    "type": "Button",
                    "id": "c5d5ac90-c7f9-4906-8a0c-dd6ce3ac1e02",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot4",
                    "type": "Button",
                    "id": "4448410f-a4ba-48f4-a150-be33f76d200a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6fb1d24c-36f5-4482-b106-d3c4bc0d1f90",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e258ccb1-c01c-441d-841e-a8462929f35b",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e39d7042-9432-4d6f-8845-0707d65e5c50",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a787b80-deb2-4a89-bb32-fa7222512e16",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f1b3f26-bbef-4582-8da0-25a412216731",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "356e11b3-e149-4d82-98c7-c0a0c193d929",
            "actions": [
                {
                    "name": "Close",
                    "type": "Button",
                    "id": "a68a5ebe-10d6-44d7-8a55-1a6cd055e7b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f75bfc92-b067-446a-8532-623513517b29",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Close",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}